--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "insurance-email-backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Backend for sending insurance-related emails",
+  "main": "server.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["insurance", "email", "backend", "nodemailer", "express"],
+  "author": "Your Name",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.3",
