--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
     "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["insurance", "email", "backend", "nodemailer", "express"],
+  "keywords": [
+    "insurance",
+    "email",
+    "backend",
+    "nodemailer",
+    "express"
+  ],
   "author": "Your Name",
   "license": "ISC",
   "dependencies": {
